# trustflow-ai

./: .dockerignore  .env.example  .gitignore  AUTOMATION.md  CLAUDE.md  DEMO_GUIDE.md  Dockerfile  HANDOFF.md  PROJECT_STATUS.md  README.md  apprunner.yaml
.claude/: launch.json  settings.json
.claude/agents/: policy-auditor.md  tenant-isolation-checker.md
.claude/hooks/: postedit-policy-reminder.sh  precommit-guard.sh  predeploy-reminder.sh
.claude/skills/bootstrap-db/: SKILL.md
.claude/skills/deploy-apprunner/: SKILL.md
.claude/skills/local-dev/: SKILL.md
.claude/skills/policy-audit/: SKILL.md
.claude/skills/project-status/: SKILL.md
.claude/skills/run-evals/: SKILL.md
.claude/skills/smoke-test/: SKILL.md
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/api/: admin.py  auth.py  chat.py  eval.py  healthz.py  history.py  identity.py  memory.py  trace.py
backend/app/audit/: logger.py
backend/app/auth/: identity_mapping.py  jwt_validator.py  supabase_client.py
backend/app/db/: bootstrap.py  connection.py  schema.sql
backend/app/evals/: judge.py  run_evals.py  smoke_test.py  synthetic_eval.json
backend/app/graph/: agent.py  state.py
backend/app/memory/: embeddings.py  service.py
backend/app/policy/: gateway.py  rules.py
backend/app/router/: coordinator.py
backend/app/router/dag_flows/: account_unlock.py  distribution_list.py  mfa_reset.py  password_reset.py  request_software.py
backend/app/seed/: bob_seed.py  demo_accounts.py  tenant_isolation_seed.py
backend/app/tools/: check_vpn_status.py  file_ticket.py  registry.py  reset_mfa.py  reset_password.py  unlock_account.py  vpn_diagnostic.py
backend/scripts/: render_graph.py
backend/tests/: test_coordinator.py  test_policy_gateway.py
docs/: graph.mmd
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/eval/: page.tsx
frontend/app/login/: page.tsx
frontend/components/chat/: ChatPanel.tsx  LatencyPill.tsx  LiveWorkflowStepper.tsx  Markdown.tsx  MemoryWriteSummary.tsx  MessageBubble.tsx  ProductChat.tsx  RouteBadge.tsx  RouteExplainer.tsx  TracePanel.tsx  WorkflowDiagram.tsx
frontend/components/layout/: DemoControls.tsx  Header.tsx  HealthDot.tsx
frontend/components/memory/: MemoryInspector.tsx
frontend/lib/: api.ts  supabase.ts  types.ts  useAuth.tsx  useTrace.ts  utils.ts
scripts/: take_screenshots.py
