[project]
name = "trustflow-ai"
version = "0.1.0"
description = "Secure hybrid DAG + ReAct IT support agent with 3-tier memory"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "psycopg[binary,pool]>=3.2.0",
    "anthropic>=0.39.0",
    "langgraph>=0.2.45",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-anthropic>=0.2.4",
    "voyageai>=0.3.0",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.7",
    "tenacity>=9.0.0",
    "sse-starlette>=2.1.3",
    "pyjwt>=2.9.0",
    "supabase>=2.9.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# TCH/TC (type-checking-only imports) is intentionally excluded: FastAPI resolves
# Depends()/response_model/body annotations at runtime via get_type_hints(), so
# moving those imports behind `if TYPE_CHECKING:` breaks route registration even
# with `from __future__ import annotations`.
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["E501", "S101"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
]
